Alignment issue

--- a/less/default.less
+++ b/less/default.less
@@ -63,7 +63,7 @@
     .selected-flag {
         width: 38px;
         height: 26px;
-        padding: 0 0 0 8px;
+        padding: 5px 0 0 8px;
         border-radius: 3px 0 0 3px;
         .flag {
             margin-top: -5px;
